Tablet-image fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Таблетка -->
       <div class="tablet">
         <div class="tablet-content">
-          <img src="/img/Tablet.svg" alt="Tablet image" id="tablet-image" />
+          <img id="tablet-image" src="/img/Tablet.svg" alt="Tablet image" />
           <h1 class="tablet-text">NEORIS</h1>
           <h3 id="star-1"></h3>
           <h3 id="star-2"></h3>
