--- a/index.html
+++ b/index.html
@@ -32,90 +32,92 @@
 
     <section id="s-2">
       <!-- блок "о шрифте" -->
+      <div id="about-content">
+        <h2 id="about-head">О шрифте</h2>
+        <img id="about-union-1" src="img/Union.svg" alt="Union" />
+        <div id="about-text">
+          <p>
+            TT Neoris — шрифт, разработанный командой TypeType в 2023 году. Его
+            название образовано от двух слов: “neo” — «новый» и “ris” ---
+            «возвышение». Работа над ним длилась два с половиной года.
+          </p>
+          <p>
+            Это самый амбициозный проект студии: цель — создать «идеальный
+            неогротеск», который откроет новую главу в типографике и станет
+            бестселлером.
+          </p>
+          <p>
+            Его характер нейтральный, но с деталями, которые делают его
+            уникальным.
+          </p>
+        </div>
 
-      <h2 id="about-head">О шрифте</h2>
-      <div id="about-text">
-        <p>
-          TT Neoris — шрифт, разработанный командой TypeType в 2023 году. Его
-          название образовано от двух слов: “neo” — «новый» и “ris” ---
-          «возвышение». Работа над ним длилась два с половиной года.
-        </p>
-        <p>
-          Это самый амбициозный проект студии: цель — создать «идеальный
-          неогротеск», который откроет новую главу в типографике и станет
-          бестселлером.
-        </p>
-        <p>
-          Его характер нейтральный, но с деталями, которые делают его
-          уникальным.
-        </p>
+        <img id="about-union-2" src="img/Union.svg" alt="Union" />
       </div>
-      <img id="about-union-1" src="img/Union.svg" alt="Union" />
-      <img id="about-union-2" src="img/Union.svg" alt="Union" />
-      <!-- <div id="about-container">
-      </div> -->
     </section>
 
     <!-- !ТРЕТИЙ БЛОК -->
     <section id="s-3">
-      <h2 id="outline-head">Начертания</h2>
-      <img id="outline-long-line" src="img/long-line.svg" alt="long-line" />
-      <div id="outline-styles">
-        <div id="outline-normal">
-          <h2 class="grey-h2">Normal</h2>
-          <img src="img/Line 262.svg" alt="line" />
+      <div id="outlines-content">
+        <div id="outlines-atic">
+          <h2 id="outline-head">Начертания</h2>
+          <img id="outline-long-line" src="img/long-line.svg" alt="long-line" />
+          <div id="outline-styles">
+            <div id="outline-normal">
+              <h2 class="grey-h2">Normal</h2>
+              <img src="img/Line 262.svg" alt="line" />
+            </div>
+            <div id="outline-italic">
+              <h2 class="grey-h2">Italic</h2>
+              <img id="h2-italic" src="img/italic-line.svg" alt="italic-line" />
+            </div>
+          </div>
         </div>
-        <div id="outline-italic">
-          <h2 class="grey-h2">Italic</h2>
-          <!-- *пофиксить неровную свг -->
-          <img id="h2-italic" src="img/italic-line.svg" alt="italic-line" />
-        </div>
-      </div>
-      <!-- *что это -->
-      <div class="font-lines">
-        <!-- Обычные -->
-        <div class="row normal">
-          <p class="hairline">Hairline</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="thin">Thin</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="extralight">ExtraLight</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="light">Light</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="regular">Regular</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="medium">Medium</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="demibold">Demibold</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="bold">Bold</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="extrabold">Extrabold</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="black">Black</p>
-        </div>
-        <!-- Курсив -->
-        <div class="row italic">
-          <p class="hairline">Hairline</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="thin">Thin</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="extralight">ExtraLight</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="light">Light</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="regular">Regular</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="medium">Medium</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="demibold">Demibold</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="bold">Bold</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="extrabold">Extrabold</p>
-          <img src="img/between-sign.svg" alt="dot" />
-          <p class="black">Black</p>
+        <div class="font-lines">
+          <!-- Обычные -->
+          <div class="row normal">
+            <p class="hairline">Hairline</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="thin">Thin</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="extralight">ExtraLight</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="light">Light</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="regular">Regular</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="medium">Medium</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="demibold">Demibold</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="bold">Bold</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="extrabold">Extrabold</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="black">Black</p>
+          </div>
+          <!-- Курсив -->
+          <div class="row italic">
+            <p class="hairline">Hairline</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="thin">Thin</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="extralight">ExtraLight</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="light">Light</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="regular">Regular</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="medium">Medium</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="demibold">Demibold</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="bold">Bold</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="extrabold">Extrabold</p>
+            <img src="img/between-sign.svg" alt="dot" />
+            <p class="black">Black</p>
+          </div>
         </div>
       </div>
 
@@ -149,18 +151,6 @@
         </div>
       </div>
 
-      <!--variable-->
-      <!-- <div id="variable-example">
-        <p class="letter-V">V</p>
-        <p class="letter-A1">A</p>
-        <p class="letter-R">R</p>
-        <p class="letter-I">I</p>
-        <p class="letter-A2">A</p>
-        <p class="letter-B">B</p>
-        <p class="letter-L">L</p>
-        <p class="letter-E">E</p>
-      </div> -->
-
       <div id="variable-example">
         <span class="letter letter-V">V</span>
         <span class="letter letter-A1">A</span>
@@ -175,41 +165,45 @@
 
     <!-- !ЧЕТВЕРТЫЙ БЛОК -->
     <section id="s-4">
-      <h2 id="language-head">Языки</h2>
-      <p id="language-description">Поддержка более 230</p>
-      <img id="language-union" src="img/Union.svg" alt="Union" />
-      <div>
+      <div id="language-atic">
+        <h2 id="language-head">Языки</h2>
+        <img id="language-union" src="img/Union.svg" alt="Union" />
+        <p id="language-description">Поддержка более 230</p>
+      </div>
+
+      <div id="language-block">
         <img id="language-bg" src="img/language-bg.svg" alt="language-bg" />
-      </div>
-      <!-- *пофиксить расстояние между языками -->
-      <div class="languages-row row-1">
-        <span class="languages">русский</span>
-        <span class="languages">Български</span>
-        <span class="languages">English</span>
-        <span class="languages">Português</span>
-      </div>
+        <div id="languages-rows">
+          <div class="languages-row row-1">
+            <span class="languages">русский</span>
+            <span class="languages">Български</span>
+            <span class="languages">English</span>
+            <span class="languages">Português</span>
+          </div>
 
-      <div class="languages-row row-2">
-        <span class="languages">Čeština</span>
-        <span class="languages">Slovenčina</span>
-        <span class="languages">Hrvatski</span>
-        <span class="languages">Português</span>
-        <span class="languages">Português</span>
-      </div>
+          <div class="languages-row row-2">
+            <span class="languages">Čeština</span>
+            <span class="languages">Slovenčina</span>
+            <span class="languages">Hrvatski</span>
+            <span class="languages">Polski</span>
+            <span class="languages">Nederlands</span>
+          </div>
 
-      <div class="languages-row row-3">
-        <span class="languages">Cebuano</span>
-        <span class="languages">Faka-Tonga</span>
-        <span class="languages">Қазақ тілі</span>
-        <span class="languages">Türkmen</span>
-      </div>
+          <div class="languages-row row-3">
+            <span class="languages">Cebuano</span>
+            <span class="languages">Faka-Tonga</span>
+            <span class="languages">Қазақ тілі</span>
+            <span class="languages">Türkçe</span>
+          </div>
 
-      <div class="languages-row row-4">
-        <span class="languages">русский</span>
-        <span class="languages">Română</span>
-        <span class="languages">Català</span>
-        <span class="languages">Euskara</span>
-        <span class="languages">Português</span>
+          <div class="languages-row row-4">
+            <span class="languages">Română</span>
+            <span class="languages">Català</span>
+            <span class="languages">Euskara</span>
+            <span class="languages">Latviešu</span>
+            <span class="languages">Suomi</span>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -220,9 +214,11 @@
 
     <!-- !ШЕСТОЙ БЛОК -->
     <section id="s-6">
-      <h2 id="glyph-head">Глифы</h2>
-      <h2 id="glyph-head-2">Ģłŷþћ₴</h2>
-      <img id="glyph-line" src="img/long-line-glyphs.svg" alt="glyph-line" />
+      <div id="glyph-atic">
+        <h2 id="glyph-head">Глифы</h2>
+        <img id="glyph-line" src="img/long-line-glyphs.svg" alt="glyph-line" />
+        <h2 id="glyph-head-2" class="grey-h2">Ģłŷþћ₴</h2>
+      </div>
       <div class="glyph-grid">
         <!-- первая колонка -->
         <div class="glyph-column">
@@ -318,7 +314,7 @@
     </section>
     <!-- !СЕДЬМОЙ БЛОК -->
     <section id="s-7">
-      <div>
+      <div id="species-atic">
         <h2 id="species-head">Особенности</h2>
         <div id="species-text-1">
           <p>Большое внимание в Neoris уделено стилистическим альтернативам.</p>
@@ -353,61 +349,116 @@
           </p>
         </div>
       </div>
-      <img id="Neo-dot-ris" src="img/neo-dot-ris.png" alt="neo-dot-ris" />
+      <div id="Neo-dot-ris">
+        <img src="img/neo-dot-ris.png" alt="neo-dot-ris" />
+      </div>
     </section>
     <!-- !ВОСЬМОЙ БЛОК -->
     <section id="s-8">
-      <h2 id="symbols-head">Специальные символы</h2>
-      <div id="symbols-text">
-        <p>
-          В набор входит большое количество различных знаков. Это избавляет
-          дизайнеров от необходимости создавать дополнительные иконки вручную —
-          всё уже встроено в гарнитуру и гармонично сочетается с её формами.
-        </p>
+      <div id="symbols-atic">
+        <h2 id="symbols-head">Специальные символы</h2>
+        <div id="symbols-text">
+          <p>
+            В набор входит большое количество различных знаков. Это избавляет
+            дизайнеров от необходимости создавать дополнительные иконки вручную
+            — всё уже встроено в гарнитуру и гармонично сочетается с её формами.
+          </p>
+        </div>
       </div>
 
       <!-- фон-часы -->
-      <div class="circle-frame">
-        <img class="clocks" src="img/clocks.png" alt="clocks" />
-        <div class="clocks-symbols">
-          <div id="row-1">
-            <span></span>
-            <span></span>
+      <div id="symbols-content">
+        <div class="symbols-wrapper" id="left">
+          <div class="symbols-column" id="column-5">
+            <p></p>
           </div>
-          <div id="row-2">
-            <span>¤</span>
-            <span></span>
+          <div class="symbols-column" id="column-4">
+            <p></p>
+            <p></p>
           </div>
-          <div id="row-3">
-            <span></span>
-            <span></span>
+          <div class="symbols-column" id="column-3">
+            <p></p>
+            <p>₹</p>
           </div>
-          <div id="row-4">
-            <span></span>
-            <span></span>
+          <div class="symbols-column" id="column-2">
+            <p></p>
+          </div>
+          <div class="symbols-column" id="column-1">
+            <p></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="circle-frame">
+          <img class="clocks" src="img/clocks.png" alt="clocks" />
+          <div class="clocks-symbols">
+            <div id="row-1">
+              <span></span>
+              <span></span>
+            </div>
+            <div id="row-2">
+              <span>¤</span>
+              <span></span>
+            </div>
+            <div id="row-3">
+              <span></span>
+              <span></span>
+            </div>
+            <div id="row-4">
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </div>
+        <!-- боковые блоки с символами -->
+        <div class="symbols-wrapper" id="right">
+          <div class="symbols-column" id="column-1">
+            <p></p>
+            <p></p>
+          </div>
+          <div class="symbols-column" id="column-2">
+            <p></p>
+          </div>
+          <div class="symbols-column" id="column-3">
+            <p></p>
+            <p></p>
+          </div>
+          <div class="symbols-column" id="column-4">
+            <p></p>
+            <p></p>
+          </div>
+          <div class="symbols-column" id="column-5">
+            <p></p>
           </div>
         </div>
       </div>
     </section>
     <!-- !ДЕВЯТЫЙ БЛОК -->
-    <!-- Надо разобраться с дивами -->
     <section id="s-9">
-      <h2>Neoris в жизни</h2>
-      <div class="Photo-examples">
-        <div class="Photo-row">
-          <img class="Photo-short" src="img/Photo-1.png" alt="" />
-          <img class="Photo-short" src="img/Photo-1-1.png" alt="" />
-        </div>
-        <img id="Photo-long" src="img/Photo-3.png" alt="" />
+      <div id="use-head">
+        <h2>Neoris в жизни</h2>
+      </div>
+
+      <div class="photo-examples">
+        <img class="top-img" src="img/Photo-1.png" alt="1" />
+        <img class="top-img" src="img/Photo-1-1.png" alt="2" />
+        <img class="bottom-img" src="img/Photo-3.png" alt="3" />
       </div>
     </section>
-
+    <!-- !ДЕСЯТЫЙ БЛОК -->
     <section id="s-10">
-      <h2>Neoris</h2>
-      <h2>Неогротеск</h2>
-      <h2>бдз257</h2>
-      <h2>Хайруллин Руслан</h2>
-      <img src="img/Footer-line.svg" alt="" />
+      <div id="end-content">
+        <h2>Neoris</h2>
+        <div id="name-group">
+          <div id="bdz">
+            <h2 class="end-text">бдз257</h2>
+          </div>
+          <img src="img/Footer-line.svg" alt="" />
+          <div id="name">
+            <h2 class="end-text">Хайруллин Руслан</h2>
+          </div>
+        </div>
+        <h2>Неогротеск</h2>
+      </div>
     </section>
   </body>
 </html>
